[gd_scene load_steps=2 format=3 uid="uid://om66goytgj0o"]

[ext_resource type="Script" path="res://Scenes/GUI_UI/UtilitiesUI/show_damage_takenScript.gd" id="1_ne8an"]

[node name="showDamageTaken" type="CharacterBody2D"]
scale = Vector2(0.1, 0.1)
script = ExtResource("1_ne8an")

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="appears" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="idle" type="Timer" parent="."]
wait_time = 0.5

[node name="disappear" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="appears" to="." method="_on_appears_timeout"]
[connection signal="timeout" from="idle" to="." method="_on_idle_timeout"]
[connection signal="timeout" from="disappear" to="." method="_on_disappear_timeout"]
